--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <body class="vh-100" style="background-color: #000;">
 
-        <div class="container h-100 w-75" style="background-color: #ffffff">
+        <div class="container w-75" style="background-color: #ffffff">
 
             <header class="row mx-auto text-center pt-5">
                 <h1 class=""> Carolina Parra Barlette </h1>
